tests/NormalTests/paczka1/fuzzy1/82951642.err
Error in line 7: H0E4iBQ S828 77,7
Error in line 10: 6RRKGYcwP A753 28,2
Error in line 11: MVjwpDEF3Z A212 20,7
Error in line 4: YagbsI1gP S828 21,5
Error in line 23: H0E4iBQ A753 14,7
Error in line 35: A212 S57 80,3
